--- a/docs/assets/css/markdown.css
+++ b/docs/assets/css/markdown.css
@@ -161,7 +161,8 @@ code.highlighter-rouge {
 }
 
 .markdown article > table {
-    width: 100%;
+    width: calc(100% - 2em);
+    margin-left: 2em;
     background-color: antiquewhite;
 }
 
